--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"migrate": "drizzle-kit generate:sqlite"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/better-sqlite3": "^7.6.6",
 		"better-sqlite3": "^9.0.0",
 		"dotenv": "^16.3.1",
 		"drizzle-kit": "^0.19.13",
