--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
 	"singleQuote": false,
 	"trailingComma": "none",
 	"printWidth": 120,
-	"semi": true,
+	"semi": false,
 	"tabWidth": 4,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
