--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"drizzle-orm": "^0.28.6",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.69.5",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
