--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"migrate": "drizzle-kit generate:sqlite"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/better-sqlite3": "^7.6.6",
 		"better-sqlite3": "^9.0.0",
