--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/better-sqlite3": "^7.6.6",
-		"better-sqlite3": "^9.0.0",
 		"dotenv": "^16.3.1",
 		"drizzle-kit": "^0.19.13",
 		"drizzle-orm": "^0.28.6",
@@ -29,5 +28,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"better-sqlite3": "^9.0.0"
+	}
 }
