--- a/package.json
+++ b/package.json
@@ -29,7 +29,13 @@
 		"vite": "^4.4.2"
 	},
 	"type": "module",
+	"packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b",
 	"dependencies": {
-		"better-sqlite3": "^9.0.0"
+		"better-sqlite3": "^11.9.1"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"better-sqlite3"
+		]
 	}
 }
